variable name changed